@@ -1,9 +1,12 @@
 package org.tenten.tentenbe.domain.tour.service;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.tenten.tentenbe.domain.member.model.LikedItem;
@@ -15,14 +18,14 @@ import org.tenten.tentenbe.domain.tour.dto.response.TourSimpleResponse;
 import org.tenten.tentenbe.domain.tour.exception.TourException;
 import org.tenten.tentenbe.domain.tour.model.TourItem;
 import org.tenten.tentenbe.domain.tour.repository.TourItemRepository;
+import org.tenten.tentenbe.global.common.enums.Category;
 import org.tenten.tentenbe.global.common.enums.Region;
 
-import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.springframework.http.HttpStatus.*;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class TourService {
@@ -39,7 +42,43 @@ public class TourService {
             tourItems = tourItemRepository.findByAreaCode(Region.fromName(region).getAreaCode());
         }
 
-        List<TourSimpleResponse> tourSimpleResponses = tourItems.stream()
+        List<TourSimpleResponse> tourSimpleResponses = getTourSimpleResponses(member, tourItems, pageable);
+
+        return new PageImpl<>(tourSimpleResponses, pageable, tourItems.size());
+    }
+
+    @Transactional(readOnly = true)
+    public Page<TourSimpleResponse> searchTours(Long memberId, String regionName, String categoryName, String searchWord, Pageable pageable) {
+        Member member = memberRepository.getReferenceById(memberId);
+        Region region = Region.fromName(regionName);
+        Category category = findCategory(categoryName);
+
+        Specification<TourItem> spec = Specification.where(regionIs(region))
+            .and(categoryIs(category))
+            .and(nameContains(searchWord));
+        List<TourItem> tourItems = tourItemRepository.findAll(spec);
+
+        List<TourSimpleResponse> tourSimpleResponses = getTourSimpleResponses(member, tourItems, pageable);
+
+        return new PageImpl<>(tourSimpleResponses, pageable, tourItems.size());
+    }
+
+    @Transactional(readOnly = true)
+    public TourDetailResponse getTourDetail(Long memberId, Long tourItemId) {
+        TourItem tourItem = tourItemRepository.findById(tourItemId)
+            .orElseThrow(() -> new TourException("해당 아이디로 존재하는 리뷰가 없습니다. tourItemId : " + tourItemId, NOT_FOUND));
+        Member member = memberRepository.getReferenceById(memberId);
+
+        Boolean liked = likedCheck(member, tourItem.getId());
+
+        return new TourDetailResponse(tourItem, liked);
+    }
+
+    private List<TourSimpleResponse> getTourSimpleResponses(Member member, List<TourItem> tourItems, Pageable pageable) {
+        int start = (int) pageable.getOffset();
+        int end = Math.min((start + pageable.getPageSize()), tourItems.size());
+
+        return tourItems.stream()
             .map(tourItem -> new TourSimpleResponse(
                 tourItem.getId(),
                 tourItem.getTitle(),
@@ -51,35 +90,38 @@ public class TourService {
                 (long) tourItem.getTripLikedItems().size(),
                 likedCheck(member, tourItem.getId()),
                 tourItem.getSmallThumbnailUrl()
-            )).collect(Collectors.toList());
-
-        return new PageImpl<>(tourSimpleResponses, pageable, tourItems.size());
+            )).toList()
+            .subList(start, end);
     }
 
-    @Transactional(readOnly = true)
-    public Page<TourSimpleResponse> searchTours(String region, String type, String keyword) {
-
+    private Category findCategory(String categoryName) {
+        if(categoryName != null) {
+            return Category.fromName(categoryName);
+        }
         return null;
     }
 
-    @Transactional(readOnly = true)
-    public TourDetailResponse getTourDetail(Long memberId, Long tourItemId) {
-        TourItem tourItem = tourItemRepository.findById(tourItemId)
-            .orElseThrow(() -> new TourException("해당 아이디로 존재하는 리뷰가 없습니다. tourItemId : " + tourItemId, NOT_FOUND));
-        Member member = memberRepository.getReferenceById(memberId);
+    private Specification<TourItem> regionIs(Region region) {
+        return (root, query, cb) -> cb.equal(root.get("areaCode"), region.getAreaCode());
+    }
 
-        Boolean liked = likedCheck(member, tourItem.getId());
+    private Specification<TourItem> categoryIs(Category category) {
+        return (root, query, cb) -> {
+            if (category == null) {
+                return cb.conjunction();
+            }
+            return cb.equal(root.get("contentTypeId"), category.getCode());
+        };
+    }
 
-        return new TourDetailResponse(
-            tourItem,
-            liked
-        );
+    private Specification<TourItem> nameContains(String searchWord) {
+        return (root, query, cb) -> cb.like(root.get("title"), "%" + searchWord + "%");
     }
 
     private Boolean likedCheck(Member member, Long tourId) {
         return member.getLikedItems().stream()
             .map(LikedItem::getId)
-            .collect(Collectors.toSet())
+            .toList()
             .contains(tourId);
     }
 
